GUI , styling , randomized , algo lists

--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
     <div id="gridContainer" class="grid">
     </div>
 
+
+    <nav>
+        <ul class="drop-down closed">
+          <li><a href="#" class="nav-button">Home</a></li>
+          <li><a href="#" id="dfs-link">DFS</a></li>
+          <li><a href="#" id="bfs-link">BFS</a></li>
+          <li><a href="#" id="a*Man-link">A*-Manhattan</a></li>
+          <li><a href="#" id="a*ECLD-link">A*-Euclidean</a></li>
+        </ul>
+      </nav>
+      <button id="randomizeButton">Randomize</button>
+
+
     <script src="index.js"></script>
 
 </body>
 
 </html>
+
