--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </ul>
       </nav>
       <button id="randomizeButton">Randomize</button>
-
+      <button id="prv" hidden>prev</button>
+      <button id="nxt" hidden>next</button>
 
     <script src="index.js"></script>
 
